--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,23 @@ on:
 jobs:
   run-script:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'  # or change to your preferred version
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
 
-    - name: Run main.py
-      run: python main.py
+      - name: Run main.py
+        run: python main.py
+
+      - name: Upload output.csv
+        uses: actions/upload-artifact@v4
+        with:
+          name: output-file
+          path: Output/output.csv
