--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,18 @@
-name: Run Python Script
+name: Save output.csv to repo
 
 on:
   push:
-    branches: [main]  # or change to your branch name
-  workflow_dispatch:  # allow manual trigger via GitHub UI
+    branches: [main]
 
 jobs:
-  run-script:
+  save-output:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false  # Important: allows custom git commands
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -20,11 +23,13 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: Run main.py
+      - name: Run Python script
         run: python main.py
 
-      - name: Upload output.csv
-        uses: actions/upload-artifact@v4
-        with:
-          name: output-file
-          path: Output/output.csv
+      - name: Commit and push output.csv
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add Output/output.csv
+          git commit -m "Add generated output.csv"
+          git push origin main
