--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  save-output:
+  run-script:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: true  # ✅ enables pushing with GITHUB_TOKEN
+      - uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -24,15 +20,11 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: Run Python script
+      - name: Run main.py
         run: python main.py
 
-      - name: Commit and push output.csv
-        run: |
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git add Output/output.csv
-
-          # Only commit if the file changed
-          git diff --cached --quiet || git commit -m "Update output.csv [skip ci]"
-          git push
+      - name: Upload output.csv
+        uses: actions/upload-artifact@v4
+        with:
+          name: output-file
+          path: Output/output.csv
